[prometheus-kafka-exporter] Add Startup Probe (#6133)
Signed-off-by: kjoshi <kjoshi@egnyte.com>
Co-authored-by: kjoshi <kjoshi@egnyte.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -97,6 +97,13 @@ service:
   # The field is deprecated, implementation-specific annotations should be set instead.
   loadBalancerIP: null
 
+startup:
+  enabled: false
+  probe:
+    httpGet:
+      path: /
+      port: exporter-port
+
 liveness:
   enabled: false
   probe:
