--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -96,8 +96,10 @@ spec:
         {{- if .Values.metricLabelsAllowlist }}
         - --metric-labels-allowlist={{ .Values.metricLabelsAllowlist | join "," }}
         {{- end }}
-        {{- if .Values.metricAnnotationsAllowList }}
-        - --metric-annotations-allowlist={{ .Values.metricAnnotationsAllowList | join "," }}
+        {{- /* backwards compatibility with metricAnnotationsAllowList */ }}
+        {{- $metricAnnotationsAllowlist := .Values.metricAnnotationsAllowlist | default .Values.metricAnnotationsAllowList }}
+        {{- if $metricAnnotationsAllowlist }}
+        - --metric-annotations-allowlist={{ $metricAnnotationsAllowlist | join "," }}
         {{- end }}
         {{- if .Values.metricAllowlist }}
         - --metric-allowlist={{ .Values.metricAllowlist | join "," }}
