[prometheus-kafka-exporter] Add new values to set tls file names
Signed-off-by: Michael Beutler <35310806+michaelbeutler@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -55,9 +55,9 @@ spec:
           {{- if .Values.tls.enabled }}
             - '--tls.enabled'
           {{- if .Values.tls.mountPath }}
-            - '--tls.ca-file={{ .Values.tls.mountPath }}/ca.crt'
-            - '--tls.cert-file={{ .Values.tls.mountPath }}/tls.crt'
-            - '--tls.key-file={{ .Values.tls.mountPath }}/tls.key'
+            - '--tls.ca-file={{ .Values.tls.mountPath }}/{{ .Values.tls.caFile }}'
+            - '--tls.cert-file={{ .Values.tls.mountPath }}/{{ .Values.tls.certFile }}'
+            - '--tls.key-file={{ .Values.tls.mountPath }}/{{ .Values.tls.keyFile }}'
           {{- end }}
           {{- if .Values.tls.insecureSkipVerify }}
             - '--tls.insecure-skip-tls-verify'
@@ -89,9 +89,9 @@ spec:
             - '--sasl.kerberos-auth-type={{ .Values.sasl.kerberos.kerberosAuthType }}'
           {{- end }}
           {{- if .Values.server.tls.enabled }}
-            - '--server.tls.ca-file={{ .Values.server.tls.mountPath }}/ca.crt'
-            - '--server.tls.cert-file={{ .Values.server.tls.mountPath }}/tls.crt'
-            - '--server.tls.key-file={{ .Values.server.tls.mountPath }}/tls.key'
+            - '--server.tls.ca-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.caFile }}'
+            - '--server.tls.cert-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.certFile }}'
+            - '--server.tls.key-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.keyFile }}'
             - '--server.tls.mutual-auth-enabled={{ .Values.server.tls.mutualAuthEnabled }}'
           {{- end }}
           {{- end }}
