--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -189,6 +189,9 @@ tls:
   serverName: ""
   # mountPath: /secret/certs
   # secretName: <name of an existing secret>
+  caFile: ca.crt
+  certFile: tls.crt
+  keyFile: tls.key
 
 sasl:
   enabled: false
@@ -226,8 +229,11 @@ server:
   tls:
     enabled: false
     mutualAuthEnabled: false
-  # mountPath: /secret/certs
-  # secretName: <name of an existing secret>
+    # mountPath: /secret/certs
+    # secretName: <name of an existing secret>
+    caFile: ca.crt
+    certFile: tls.crt
+    keyFile: tls.key
 
 # If enabled Kafka dependency chart will be used.
 # This is only needed for the CI job so it should always be disabled.
