--- a/.github/workflows/renovate-custom-hooks.yaml
+++ b/.github/workflows/renovate-custom-hooks.yaml
@@ -11,7 +11,7 @@ jobs:
   renovate-post-run:
     name: Renovate Post Run
     runs-on: ubuntu-latest
-    if: github.actor == 'renovate[bot]'
+    if: github.actor == 'renovate[bot]' || github.actor == 'mend[bot]'
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
