--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -138,7 +138,7 @@ jobs:
     if: >-
       github.event.pull_request.head.repo.full_name == github.repository 
       && contains(github.event.pull_request.labels.*.name, 'dependencies/auto-merge') 
-      && (github.actor == 'renovate[bot]' || github.actor == 'helm-charts-renovate-helper[bot]')
+      && (github.actor == 'renovate[bot]' || github.actor == 'mend[bot]' || github.actor == 'helm-charts-renovate-helper[bot]')
     steps:
       # Using a GitHub App token, because GitHub Actions doesn't run on commits from github-actions bot
       # Used App:
