--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -107,7 +107,8 @@ spec:
             - --stackdriver.max-retries={{ .Values.stackdriver.maxRetries }}
             - --stackdriver.retry-statuses={{ .Values.stackdriver.retryStatuses }}
             - --web.listen-address={{ .Values.web.listenAddress }}
-            - --web.telemetry-path={{ .Values.web.path }}
+            - --web.telemetry-path={{ .Values.web.telemetryPath }}
+            - --web.stackdriver-telemetry-path={{ .Values.web.stackdriverTelemetryPath }}
           {{- if .Values.stackdriver.dropDelegatedProjects }}
             - --monitoring.drop-delegated-projects
           {{- end }}
