--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -88,12 +88,12 @@ spec:
             - '--sasl.keytab-path={{ .Values.sasl.kerberos.mountPath }}/kerberos.keytab'
             - '--sasl.kerberos-auth-type={{ .Values.sasl.kerberos.kerberosAuthType }}'
           {{- end }}
+          {{- end }}
           {{- if .Values.server.tls.enabled }}
             - '--server.tls.ca-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.caFile }}'
             - '--server.tls.cert-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.certFile }}'
             - '--server.tls.key-file={{ .Values.server.tls.mountPath }}/{{ .Values.server.tls.keyFile }}'
             - '--server.tls.mutual-auth-enabled={{ .Values.server.tls.mutualAuthEnabled }}'
-          {{- end }}
           {{- end }}
           {{- if .Values.extraArgs }}
           {{- range .Values.extraArgs  }}
@@ -146,7 +146,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- if or (.Values.tls.mountPath) (.Values.sasl.kerberos.mountPath) }}
+          {{- if or (.Values.tls.mountPath) (.Values.sasl.kerberos.mountPath) (.Values.server.tls.mountPath) }}
           volumeMounts:
             {{- if .Values.tls.mountPath }}
             - mountPath: {{ .Values.tls.mountPath }}
@@ -176,7 +176,7 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
-      {{- if or (.Values.tls.mountPath) (.Values.sasl.kerberos.mountPath) }}
+      {{- if or (.Values.tls.mountPath) (.Values.sasl.kerberos.mountPath) (.Values.server.tls.mountPath) }}
       volumes:
         {{- if .Values.tls.mountPath }}
         - name: kafka-certs
