[prometheus-kafka-exporter] Add new values to set TLS file names (#6135)
Signed-off-by: Michael Beutler <35310806+michaelbeutler@users.noreply.github.com>
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -178,10 +178,6 @@ tolerations: []
 affinity: {}
 
 # this allows the usage of tls connection to your kafka cluster based on a secret in tls format
-# mandatory keys:
-# ca.crt
-# tls.crt
-# tls.key
 tls:
   enabled: false
   insecureSkipVerify: false
@@ -189,6 +185,9 @@ tls:
   serverName: ""
   # mountPath: /secret/certs
   # secretName: <name of an existing secret>
+  caFile: ca.crt
+  certFile: tls.crt
+  keyFile: tls.key
 
 sasl:
   enabled: false
@@ -226,8 +225,11 @@ server:
   tls:
     enabled: false
     mutualAuthEnabled: false
-  # mountPath: /secret/certs
-  # secretName: <name of an existing secret>
+    # mountPath: /secret/certs
+    # secretName: <name of an existing secret>
+    caFile: ca.crt
+    certFile: tls.crt
+    keyFile: tls.key
 
 # If enabled Kafka dependency chart will be used.
 # This is only needed for the CI job so it should always be disabled.
