--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -380,7 +380,7 @@ endpoints: []
 hostNetwork: true
 
 # Share the host process ID namespace
-hostPID: true
+hostPID: false
 
 # Share the host ipc namespace
 hostIPC: false
