--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -245,7 +245,7 @@ rbac:
 hostNetwork: true
 
 # Share the host process ID namespace
-hostPID: true
+hostPID: false
 
 ## Assign a group of affinity scheduling rules
 ##
