--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-storage.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-storage.yaml
@@ -214,4 +214,32 @@ spec:
         {{- end }}
       {{- end }}
 {{- end }}
+{{- if not (.Values.defaultRules.disabled.KubernetesStorageUsage85Percent | default false) }}
+    - alert: KubernetesStorageUsage85Percent
+      annotations:
+{{- if .Values.defaultRules.additionalRuleAnnotations }}
+{{ toYaml .Values.defaultRules.additionalRuleAnnotations | indent 8 }}
+{{- end }}
+{{- if .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesStorage }}
+{{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.kubernetesStorage | indent 8 }}
+{{- end }}
+        description: Storage usage of PVC {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.persistentvolumeclaim {{`}}`}} has exceeded 85% for the last 5 minutes.
+        runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemspacefillingup/#:~:text=A%20filesystem%20running%20full%20is%20very%20bad%20for%20any%20process%20in%20need%20to%20write%20to%20the%20filesystem.%20But%20even%20before%20a%20filesystem%20runs%20full%2C%20performance%20is%20usually%20degrading.
+        summary: High storage usage detected (PVC {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.persistentvolumeclaim {{`}}`}})
+      expr: kubelet_volume_stats_used_bytes{job="kubelet", namespace{{ $namespaceOperator }}"{{ $targetNamespace }}", metrics_path="/metrics"} / kubelet_volume_stats_capacity_bytes{job="kubelet", namespace{{ $namespaceOperator }}"{{ $targetNamespace }}", metrics_path="/metrics"} * 100 > 85
+      for: {{ dig "KubernetesStorageUsage85Percent" "for" "5m" .Values.customRules }}
+      {{- with .Values.defaultRules.keepFiringFor }}
+      keep_firing_for: "{{ . }}"
+      {{- end }}
+      labels:
+        severity: {{ dig "KubernetesStorageUsage85Percent" "severity" "warning" .Values.customRules }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubernetesStorage }}
+        {{- with .Values.defaultRules.additionalRuleLabels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.defaultRules.additionalRuleGroupLabels.kubernetesStorage }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+      {{- end }}
+{{- end }}
 {{- end }}
