--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -203,6 +203,9 @@ defaultRules:
     prometheusOperator: true
     windows: true
 
+    
+  kubeClientCertificateExpiration: "601200"
+
   # Defines the operator for namespace selection in rules
   # Use "=~" to include namespaces matching the pattern (default)
   # Use "!~" to exclude namespaces matching the pattern
