--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -36,8 +36,8 @@ data:
       access: proxy
       isDefault: {{ .Values.grafana.sidecar.datasources.isDefaultDatasource }}
       jsonData:
-      {{- if .Values.grafana.sidecar.datasources.extraJsonData -}}
-        {{ tpl (toYaml .Values.grafana.sidecar.datasources.extraJsonData | nindent 8) . }}
+      {{- with .Values.grafana.sidecar.datasources.extraJsonData -}}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
         httpMethod: {{ .Values.grafana.sidecar.datasources.httpMethod }}
         timeInterval: {{ $scrapeInterval }}
